[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Map_Parts/MP-50-Thwomp_00.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Tye-set/Open_Gunner_Tile-Set.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Map_Parts/MP-50_ThwompBit_00.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 16 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 35.4749

[node name="MP-50-Thwomp" type="Node2D"]
script = ExtResource( 3 )
trigger_on_prox = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 3082

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )
hframes = 2

[node name="Area2D-Thuwmp" type="Area2D" parent="KinematicBody2D"]
collision_layer = 8
collision_mask = 3074

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D-Thuwmp"]
position = Vector2( 0, 40 )
shape = SubResource( 2 )

[node name="RayCast2D_Up" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -18, -39 )
enabled = true
cast_to = Vector2( 0, -20 )
collision_mask = 2

[node name="RayCast2D_Up2" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 18, -39 )
enabled = true
cast_to = Vector2( 0, -20 )
collision_mask = 2

[node name="RayCast2D_Up3" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 7, -39 )
enabled = true
cast_to = Vector2( 0, -20 )
collision_mask = 2

[node name="RayCast2D_Up4" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -7, -39 )
enabled = true
cast_to = Vector2( 0, -20 )
collision_mask = 2

[node name="RayCast2D" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, 50 )
cast_to = Vector2( 0, 1080 )
collision_mask = 8

[node name="Area2D-Bottom" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 112 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Bottom"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="Area2D-Trigger" type="Area2D" parent="Area2D-Bottom"]
collision_layer = 8
collision_mask = 3074

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Bottom/Area2D-Trigger"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Area2D-Bottom"]
position = Vector2( 0, 32 )
scale = Vector2( 1.28, 1.28 )
texture = ExtResource( 2 )
hframes = 40
vframes = 2
frame = 32

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="KinematicBody2D/Area2D-Thuwmp" to="." method="_on_Area2DThuwmp_body_entered"]
[connection signal="body_entered" from="Area2D-Bottom/Area2D-Trigger" to="." method="_on_Area2DTrigger_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
